--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
     "core-js": "^3.6.5",
+    "graphql": "^15.8.0",
     "vue": "^2.6.11",
+    "vue-apollo": "^3.1.0",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0"
   },
